# stitch

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  justfile  main.py
.github/workflows/: ci.yml  release-macos-dmg.yml  release.yml
benches/: stitch_bench.rs
playground/cool-folder/: slint_file.rs
src/: core.rs  main.rs
src/core/: fs.rs  mod.rs  rust_filters.rs  slint_filters.rs  text.rs  workspace.rs
src/ui/: handlers.rs  mod.rs  state.rs
tests/: additional_core_edge_tests.rs  case_insensitive_ext_matching.rs  clean_remove_regex_mismatched_quotes.rs  core_tests.rs  deep_skinny_directories_include_mode.rs  dir_only_descendants_and_selection.rs  dirs_hierarchy_flags.rs  dotfiles_excludes_interaction.rs  dotfiles_visible_by_default.rs  event_relevance_edge_cases.rs  exclude_ext_case_insensitive.rs  exclude_file_overrides_include.rs  exclude_files_recursive.rs  exclude_names_case_semantics.rs  extension_filters_edge_tests.rs  extensionless_and_multidot_filters.rs  filesystem_permission_errors.rs  filter_edge_cases.rs  fs_event_filtering.rs  fs_event_filtering_ext.rs  fs_event_filtering_outside_root.rs  fs_event_pump_tests.rs  fs_graph_tests.rs  has_children_propagation.rs  hierarchy_parse_edge_cases.rs  hierarchy_robustness_tests.rs  include_mode_intermediate_dirs_visible.rs  lean_full_line_prefix_after_apostrophe.rs  multidot_extension_behavior.rs  multidot_extension_exclude.rs  non_utf8_filenames_unix.rs  overlapping_prefixes.rs  parse_hierarchy_crlf.rs  parse_hierarchy_unicode_and_spaces.rs  path_to_unix_non_utf8_unix.rs  path_to_unix_windows.rs  path_utils_edge_cases.rs  profile_load_precedence.rs  profile_persistence.rs  prop_extension_filters_props.rs  (+37 more)
ui/: app.slint
ui/assets/: icon.icns
