[package]
name = "stitch"
version = "0.1.11"
edition = "2024"
authors = ["Giovanni Ramistella <crimps-78-pax@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gramistella/stitch"

[features]
default = ["ui", "tokens"]
ui = ["dep:slint", "dep:rfd", "dep:arboard"] 
tokens = ["dep:tiktoken-rs"] 

[dependencies]
# Make the UI deps optional so they’re not pulled in for headless/test builds
slint   = { version = "1", optional = true }
rfd     = { version = "0.14", optional = true }
arboard = { version = "3", optional = true }
tiktoken-rs = { version = "0.7", optional = true } 

regex = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1"
dunce = "1"
notify = "6"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
slint-build = "1"

[package.metadata.bundle]
name = "Stitch"
identifier = "com.gramistella.stitch"
icon = ["ui/assets/icon.icns"]  # macOS uses .icns
category = "Developer Tool"
short_description = "Select files from a project and stitch them into one text."

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
once_cell = "1"
walkdir = "2"
tiktoken-rs = "0.7"

[[bin]]
name = "stitch"
path = "src/main.rs"
test = false   
doctest = false
bench = false

[[bench]]
name = "stitch_bench"
harness = false
