[package]
name = "stitch"
version = "0.1.21"
edition = "2024"
authors = ["Giovanni Ramistella <crimps-78-pax@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gramistella/stitch"

[features]
default = ["ui", "tokens"]
ui = ["dep:slint", "dep:rfd", "dep:arboard"] 
tokens = ["dep:tiktoken-rs"] 

[dependencies]
# Make the UI deps optional so they’re not pulled in for headless/test builds
slint   = { version = "1.13.1", optional = true }
rfd     = { version = "0.15.4", optional = true }
arboard = { version = "3.6.1", optional = true }
tiktoken-rs = { version = "0.7", optional = true } 

regex = "1.11.3"
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
serde_json = "1.0.145"
dunce = "1"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "2.0", features = ["full"] }
quote = "1.0.41"

[build-dependencies]
slint-build = "1.13.1"

[package.metadata.bundle]
name = "Stitch"
identifier = "com.gramistella.stitch"
icon = ["ui/assets/icon.icns"]  # macOS uses .icns
category = "Developer Tool"
short_description = "Select files from a project and stitch them into one text."

[dev-dependencies]
tempfile = "3.23.0"
pretty_assertions = "1"
proptest = "1.8.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
once_cell = "1"
walkdir = "2"
tiktoken-rs = "0.7"

[[bin]]
name = "stitch"
path = "src/main.rs"
test = false   
doctest = false
bench = false

[[bench]]
name = "stitch_bench"
harness = false
